--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             display: inline-block;
             padding: 10px 20px;
             border-radius: 25px;
-            background-color: #ad78a5;
+            background-color: #FFFFFF;
             text-decoration: none;
             color: white;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -62,7 +62,7 @@
     <ul>
         <li><a href="https://x.com/Clababsos" target="_blank">twitter / X</a></li>
         <li><a href="https://www.youtube.com/channel/UCT8o5krNRA2OzLvVjD9lu2Q" target="_blank">youtube</a></li>
-        <li><a href="https://example.com" target="_blank">discord</a></li>
+        <li><a href="https://discord.com/invite/MEvGsG6BDk" target="_blank">discord</a></li>
     </ul>
 </body>
 </html>
