--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             list-style-type: none;
             padding: 0;
             text-align: left;
-            margin-left: 20px; /* Indent links slightly to the right */
+            margin-left: 20px;
         }
         li {
             margin: 1.7em 0;
@@ -45,7 +45,7 @@
             border-radius: 25px;
             background-color: #FFFFFF;
             text-decoration: none;
-            color: white;
+            color: #403c4c;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: box-shadow 0.3s ease;
         
@@ -62,7 +62,7 @@
     <ul>
         <li><a href="https://x.com/Clababsos" target="_blank">twitter / X</a></li>
         <li><a href="https://www.youtube.com/channel/UCT8o5krNRA2OzLvVjD9lu2Q" target="_blank">youtube</a></li>
-        <li><a href="https://discord.com/invite/MEvGsG6BDk" target="_blank">discord</a></li>
+        <li><a href="https://example.com" target="_blank">discord</a></li>
     </ul>
 </body>
 </html>
