--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             list-style-type: none;
             padding: 0;
             text-align: left;
-            margin-left: 20px;
+            margin-left: 20px; /* Indent links slightly to the right */
         }
         li {
             margin: 1.7em 0;
@@ -42,12 +42,12 @@
         a {
             display: inline-block;
             padding: 10px 20px;
-            border-radius: 25px;
+            border-radius: 12px;
             background-color: #FFFFFF;
             text-decoration: none;
             color: #403c4c;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
+            box-shadow: 13px 9px 5px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55); 
         
         }
         a:hover {
