--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         h1 {
             position: absolute;
-            left: 40px;
+            left: 160px;
             bottom: 10px;
             font-size: 4em;
             margin: 0;
@@ -31,9 +31,9 @@
         }
         ul {
             list-style-type: none;
-            padding: 0;
+            padding: 5px;
             text-align: left;
-            margin-left: 20px; /* Indent links slightly to the right */
+            margin-left: 160px; /* Indent links slightly to the right */
         }
         li {
             margin: 1.7em 0;
