--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <ul>
         <li><a href="https://x.com/Clababsos" target="_blank">twitter / X</a></li>
         <li><a href="https://www.youtube.com/channel/UCT8o5krNRA2OzLvVjD9lu2Q" target="_blank">youtube</a></li>
-        <li><a href="https://example.com" target="_blank">discord</a></li>
+        <li><a href="https://discord.com/invite/MEvGsG6BDk" target="_blank">discord</a></li>
     </ul>
 </body>
 </html>
