--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             justify-content: center;
             padding: 40px 60px; /* Larger padding for bigger bubbles */
             width: 60px;
-            height: 80px;
+            height: 90px;
             border-radius: 50%;
-            background-color: #6989ce; /* Button color */
+            background-color: #2b2330; /* Button color */
             text-decoration: none;
             color: white; /* Button text color */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -61,7 +61,7 @@
         }
         a:hover {
             box-shadow: 0px 15px 5px rgba(0, 0, 0, 0.2),
-                        0 0 30px #393b4f, /* Enhanced glow on hover */
+                        0 0 30px #2b2330, /* Enhanced glow on hover */
                         0 0 40px #3f5069,
                         0 0 50px #6370a2,
                         0 0 80px #7898e0;
