--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         h1 {
             position: absolute;
-            left: 219px;
+            left: 234px;
             bottom: 10px;
             font-size: 4em;
             margin: 0;
@@ -44,13 +44,10 @@
             margin: 0;
         }
         a {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+ display: inline-block;
             padding: 40px 60px; /* Larger padding for bigger bubbles */
-            width: 60px;
-            height: 90px;
-            border-radius: 50%;
+            border-radius: 600px; /* More rounded corners for bubble effect */
+            padding: 40px 60px; 
             background-color: #2b2330; /* Button color */
             text-decoration: none;
             color: white; /* Button text color */
